[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/MainMenuBackgrounds/2/1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MainMenuBackgrounds/2/4.png" type="Texture" id=4]
[ext_resource path="res://Scenes&Scripts/2.gd" type="Script" id=5]
[ext_resource path="res://Fonts/tres/DeterminationS8White.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/UI/Player Faces/Chara1.png" type="Texture" id=7]
[ext_resource path="res://Fonts/tres/DeterminationS16WhiteNoOutline.tres" type="DynamicFont" id=8]
[ext_resource path="res://Sprites/Skins/Frisk/WalkRight2.png" type="Texture" id=9]
[ext_resource path="res://GlobalScenes/SoulPlayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes&Scripts/PlayerFaces.gd" type="Script" id=11]
[ext_resource path="res://Sprites/UI/Player Faces/Empty.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Skins/Frisk/WalkRight.png" type="Texture" id=13]

[sub_resource type="Animation" id=5]
resource_name = "MoveLeft"
length = 11.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 320 ), Vector2( 0, 320 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveLeft"
length = 16.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 320 ), Vector2( -320, 320 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "MoveLeft"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 320 ), Vector2( 0, 320 ) ]
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 16
anti_aliasing = false

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "?",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.45098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 4

[sub_resource type="Animation" id=19]
resource_name = "MoveUp"
length = 4.6
tracks/0/type = "value"
tracks/0/path = NodePath("text_username:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 99 ), Vector2( 40, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("input_1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 131 ), Vector2( 40, 131 ), Vector2( 40, -40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("text_token:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 187 ), Vector2( 40, 187 ), Vector2( 40, -40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("input_2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 219 ), Vector2( 40, 219 ), Vector2( 40, -40 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("input_3:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 267 ), Vector2( 40, 267 ), Vector2( 40, -40 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("option_1:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 337 ), Vector2( 120, 337 ), Vector2( 120, -40 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("option_2:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.8, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 312, 337 ), Vector2( 312, 337 ), Vector2( 312, -40 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("account_1:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.3, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 34 ), Vector2( 480, 34 ), Vector2( 480, -140 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("account_2:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.6, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 176 ), Vector2( 480, 176 ), Vector2( 480, -140 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("account_3:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 3.1, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 318 ), Vector2( 480, 318 ), Vector2( 480, -140 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SoulPlayer:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.5, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 103.5, 344.5 ), Vector2( 103.5, 344.5 ), Vector2( 120, -40 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("CheckUserData:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 3.8, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 600 ), Vector2( 0, 231.5 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("CheckUserData:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 4.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("SlotsFullPanel:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("CheckUserData:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=20]
resource_name = "MoveUp2"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CheckUserData:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 231.5 ), Vector2( 0, 231.5 ), Vector2( 0, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CheckUserData:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 1, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CheckUserData:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 3.0
} ]

[sub_resource type="Animation" id=22]
resource_name = "Walk1"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -50, 198 ), Vector2( 320, 198 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "Walk2"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 198 ), Vector2( 660, 198 ) ]
}

[node name="2" type="Node2D"]
script = ExtResource( 5 )

[node name="Layer1" type="Control" parent="."]
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 510.0

[node name="Background" type="Control" parent="Layer1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_bottom = -30.0

[node name="1" type="Sprite" parent="Layer1/Background"]
position = Vector2( 640, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="Sprite" parent="Layer1/Background"]
position = Vector2( 640, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Move" type="AnimationPlayer" parent="Layer1/Background/2"]
autoplay = "MoveLeft"
anims/MoveLeft = SubResource( 5 )

[node name="3" type="Sprite" parent="Layer1/Background"]
position = Vector2( 960, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Move" type="AnimationPlayer" parent="Layer1/Background/3"]
autoplay = "MoveLeft"
anims/MoveLeft = SubResource( 6 )

[node name="4" type="Sprite" parent="Layer1/Background"]
position = Vector2( 640, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Move" type="AnimationPlayer" parent="Layer1/Background/4"]
autoplay = "MoveLeft"
anims/MoveLeft = SubResource( 7 )

[node name="Layer2" type="Control" parent="."]
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 510.0

[node name="UI" type="Control" parent="Layer2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="account_1" type="Panel" parent="Layer2/UI"]
margin_left = 480.0
margin_top = 34.0
margin_right = 608.0
margin_bottom = 162.0
custom_styles/panel = SubResource( 8 )

[node name="PlayerFaces" type="AnimatedSprite" parent="Layer2/UI/account_1"]
position = Vector2( 36, 42 )
frames = SubResource( 14 )
animation = "?"
script = ExtResource( 11 )

[node name="Username" type="Label" parent="Layer2/UI/account_1"]
margin_left = 8.0
margin_top = 63.0
margin_right = 120.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="EXP" type="Label" parent="Layer2/UI/account_1"]
margin_left = 67.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="DF" type="Label" parent="Layer2/UI/account_1"]
margin_left = 92.0
margin_top = 10.0
margin_right = 116.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="HP" type="ProgressBar" parent="Layer2/UI/account_1"]
margin_left = 67.0
margin_top = 47.0
margin_right = 115.0
margin_bottom = 58.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 20.0
value = 9.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="HP_loads" type="Label" parent="Layer2/UI/account_1"]
visible = false
margin_left = 67.0
margin_top = 44.0
margin_right = 115.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 8 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="account_2" type="Panel" parent="Layer2/UI"]
margin_left = 480.0
margin_top = 176.0
margin_right = 608.0
margin_bottom = 304.0
custom_styles/panel = SubResource( 8 )

[node name="PlayerFaces" type="AnimatedSprite" parent="Layer2/UI/account_2"]
position = Vector2( 36, 42 )
frames = SubResource( 14 )
animation = "?"
script = ExtResource( 11 )

[node name="Username" type="Label" parent="Layer2/UI/account_2"]
margin_left = 8.0
margin_top = 63.0
margin_right = 120.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="EXP" type="Label" parent="Layer2/UI/account_2"]
margin_left = 67.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="DF" type="Label" parent="Layer2/UI/account_2"]
margin_left = 92.0
margin_top = 10.0
margin_right = 116.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="HP" type="ProgressBar" parent="Layer2/UI/account_2"]
margin_left = 67.0
margin_top = 47.0
margin_right = 115.0
margin_bottom = 58.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 20.0
value = 9.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="HP_loads" type="Label" parent="Layer2/UI/account_2"]
visible = false
margin_left = 67.0
margin_top = 44.0
margin_right = 115.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 8 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="account_3" type="Panel" parent="Layer2/UI"]
margin_left = 480.0
margin_top = 318.0
margin_right = 608.0
margin_bottom = 446.0
custom_styles/panel = SubResource( 8 )

[node name="PlayerFaces" type="AnimatedSprite" parent="Layer2/UI/account_3"]
position = Vector2( 36, 42 )
frames = SubResource( 14 )
animation = "?"
script = ExtResource( 11 )

[node name="Username" type="Label" parent="Layer2/UI/account_3"]
margin_left = 8.0
margin_top = 63.0
margin_right = 120.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="EXP" type="Label" parent="Layer2/UI/account_3"]
margin_left = 67.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="DF" type="Label" parent="Layer2/UI/account_3"]
margin_left = 92.0
margin_top = 10.0
margin_right = 116.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="HP" type="ProgressBar" parent="Layer2/UI/account_3"]
margin_left = 67.0
margin_top = 47.0
margin_right = 115.0
margin_bottom = 58.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
max_value = 20.0
value = 9.0
percent_visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="HP_loads" type="Label" parent="Layer2/UI/account_3"]
visible = false
margin_left = 67.0
margin_top = 44.0
margin_right = 115.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 8 )
text = "?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="input_1" type="LineEdit" parent="Layer2/UI"]
margin_left = 40.0
margin_top = 131.0
margin_right = 440.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 8 )
custom_styles/read_only = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
align = 1
max_length = 30

[node name="input_2" type="LineEdit" parent="Layer2/UI"]
margin_left = 40.0
margin_top = 219.0
margin_right = 440.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 8 )
custom_styles/read_only = SubResource( 12 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
align = 1
max_length = 30
secret = true

[node name="text_username" type="Label" parent="Layer2/UI"]
margin_left = 40.0
margin_top = 99.0
margin_right = 440.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 13 )
text = "Username"
align = 1
valign = 1

[node name="text_token" type="Label" parent="Layer2/UI"]
margin_left = 40.0
margin_top = 187.0
margin_right = 440.0
margin_bottom = 219.0
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 13 )
text = "Token"
align = 1
valign = 1

[node name="input_3" type="Label" parent="Layer2/UI"]
margin_left = 40.0
margin_top = 267.0
margin_right = 440.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 13 )
text = "Authenticate"
align = 1
valign = 1

[node name="option_1" type="Label" parent="Layer2/UI"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = 120.0
margin_top = 337.0
margin_right = 152.0
margin_bottom = 354.0
custom_fonts/font = ExtResource( 8 )
text = "Play"
align = 1
valign = 1

[node name="option_2" type="Label" parent="Layer2/UI"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = 312.0
margin_top = 337.0
margin_right = 360.0
margin_bottom = 354.0
custom_fonts/font = ExtResource( 8 )
text = "Delete"
align = 1
valign = 1

[node name="SlotsFullPanel" type="Panel" parent="Layer2/UI"]
margin_left = 40.0
margin_top = 56.0
margin_right = 440.0
margin_bottom = 304.0
custom_styles/panel = SubResource( 15 )

[node name="text_full" type="Label" parent="Layer2/UI/SlotsFullPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 8 )
text = "Slots Full"
align = 1
valign = 1

[node name="MoveAllUp" type="AnimationPlayer" parent="Layer2/UI"]
anims/MoveUp = SubResource( 19 )
anims/MoveUp2 = SubResource( 20 )

[node name="CheckUserData" type="Label" parent="Layer2/UI"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = 360.0
margin_right = 320.0
margin_bottom = 377.0
custom_fonts/font = ExtResource( 8 )
text = "Authenticating"
align = 1
valign = 1

[node name="dots" type="Timer" parent="Layer2/UI"]
wait_time = 0.4
autostart = true

[node name="FriskLoading" type="AnimatedSprite" parent="Layer2/UI"]
position = Vector2( -50, 198 )
scale = Vector2( 2, 2 )
frames = SubResource( 21 )
animation = "Walk"

[node name="Walk" type="AnimationPlayer" parent="Layer2/UI/FriskLoading"]
anims/Walk1 = SubResource( 22 )
anims/Walk2 = SubResource( 23 )

[node name="SoulPlayer" parent="Layer2/UI" instance=ExtResource( 10 )]
position = Vector2( 103.5, 344.5 )

[node name="account_check" type="Timer" parent="Layer2/UI"]
wait_time = 0.05
autostart = true

[node name="MoveSoul" type="Tween" parent="."]
playback_speed = 5.0
playback/speed = 5.0

[connection signal="animation_finished" from="Layer2/UI/MoveAllUp" to="." method="_on_MoveAllUp_animation_finished"]
[connection signal="timeout" from="Layer2/UI/dots" to="." method="_on_dots_timeout"]
[connection signal="timeout" from="Layer2/UI/account_check" to="." method="_on_account_check_timeout"]
